# tafakari

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  __init__.py  docker-compose.yml  init.sh  nginx.conf  pyproject.toml  serve.py
api collection/: README.md  tafakari - A Simple Reddit Clone.postman_collection.json
configs/: __init__.py
migrations/versions/: 5dad1efc0522_added_timezone_information_to_datetime_.py  80d845da568a_added_modified_on_field_to_tables.py  af73fc7b0056_.py  cd640c19f3c7_added_a_self_referential_relationship_.py  e7cb77e50e0e_.py
postman collection/: tafakari - A Simple Reddit Clone.postman_collection.json
tafakari/: __init__.py  commands.py  database.py  extensions.py  utils.py
tafakari/controllers/: __init__.py  authentication.py  comments.py  posts.py  schemas.py  subreddits.py  users.py
tafakari/models/: __init__.py  comments.py  posts.py  subreddit.py  users.py  usersubreddit.py
tafakari/views/: __init__.py  authenticate.py  authentication.py  comments.py  posts.py  posts_views.py  schemas.py  subreddits.py  subreddits_views.py  users.py  users_views.py
tests/: __init__.py  conftest.py  test_authentication.py  test_authentications.py  test_endpoints.py  test_models.py  test_posts.py  test_subreddits.py
