[tool.poetry]
name = "tafakari"
version = "0.1.0"
description = ""
authors = ["Gichana <gichanamayaka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask-sqlalchemy = "^3.0.2"
flask = "^2.2.2"
pendulum = "^2.1.2"
psycopg2 = "^2.9.5"
flask-pydantic = "^0.11.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
flask-bcrypt = "^1.0.1"
click = "^8.1.3"
faker = "^15.3.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sqlalchemy-utils = "^0.38.3"
flask-session = "^0.4.0"
flask-login = "^0.6.2"
flask-jwt-extended = "^4.4.4"
sqlalchemy-serializer = "^1.4.1"
redis = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
